<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/budget"
            android:title="@string/menu_budget" />
        <item
            android:id="@+id/nav_transport"
            android:icon="@drawable/transport"
            android:title="@string/menu_transaction" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/report"
            android:title="@string/menu_report"/>

        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/backup"
            android:title="@string/menu_backuprestore"/>

        <item
            android:id="@+id/nav_webserver"
            android:icon="@drawable/webser"
            android:title="Web Server"/>
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_web" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_more" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
