<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="#B9000000"
        android:padding="10sp"
        >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/transaction_bg">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorGray"
                    android:gravity="center_vertical|center_horizontal"/>
            <FrameLayout
                android:id="@+id/fl_adplaceholder"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="6dp" />
            <LinearLayout
                android:id="@+id/sec_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp"
                android:gravity="center_vertical|center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_you_scure"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"/>
                <Button
                    android:layout_marginTop="5dp"
                    android:id="@+id/secure_No_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secure_your_database"
                    android:textColor="@color/colorBlueDark"
                    android:textSize="10sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginRight="25sp"
                    android:padding="1sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_rounded_white_blue"/>


            </LinearLayout>
            <LinearLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:gravity="center_horizontal|center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_more"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:padding="5sp"/>
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal"
                    android:background="@color/color2gry">
                    <LinearLayout
                        android:id="@+id/expenseManager_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal|center_vertical">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ledgerbook_logo"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ledger Book - Cash Book"
                            android:textSize="8dp"
                            android:padding="5dp"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/noteBook_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_horizontal|center_vertical">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/notebook"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="NoteBook"
                            android:textSize="8dp"
                            android:padding="5dp"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                android:orientation="vertical"
                    android:padding="15sp"
                android:gravity="center_vertical|center_horizontal">
                <TextView
                        android:id="@+id/confirm_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm"
                        android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:textStyle="bold"
                        android:padding="10sp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:orientation="horizontal"
        android:padding="5sp"
    android:gravity="center_vertical|right">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

    </LinearLayout>

    <Button
            android:id="@+id/yes_btn"
            android:layout_width="0dp"
            android:layout_weight="1.1"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:layout_margin="2sp"
        android:textStyle="bold"
        android:background="@drawable/button_rounded_fill_red"/>
    <Button
        android:id="@+id/no_btn"
        android:layout_width="0dp"
        android:layout_weight="1.1"
        android:layout_height="match_parent"
        android:text="@string/no"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:layout_margin="2sp"
        android:textStyle="bold"
        android:background="@drawable/button_rounded_fill_green"/>

</LinearLayout>

            </LinearLayout>
        </LinearLayout>
</FrameLayout>